--- a/style.css
+++ b/style.css
@@ -2,15 +2,18 @@
 
 /* 1. Use the space below to change the background color of the page using the body tag */
 
-
+body {
+	background-color: pink;
+}
 
 
 
 /* 2a. Change the size of your image to 200px height and width*/
 /* 2b. Give image1 a border */
 #image1 {
-    width: 50px;
-    height: 50px;
+    width: 200px;
+    height: 200px;
+    border: 
 }
 
 /* 3. Size image2 to make it twice as large as image1 */
